@@ -66,7 +66,11 @@ Version history
 
 2009-07-16 Version 0.10 unreleased yet
 
-  * entries LF_FRIENDCLS, LF_FRIENDFCN, LF_VBCLASS and LF_IVBCLASS written by DMC are now removed.
+  * better support for DMC:
+    - entries LF_FRIENDFCN removed
+    - entries LF_FRIENDCLS, LF_VBCLASS and LF_IVBCLASS converted
     thanks to Andrew.
+  * derived-classes info in class entry now cleared to be consistent with removal of LF_DERIVED
+
 
 
